--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
@@ -8,12 +8,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
+<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.HistoryPageController">
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
          <children>
-            <Button layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+            <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
@@ -23,53 +25,15 @@
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="33.0" layoutY="107.0" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#8f8f8f">
-               <font>
-                  <Font name="Roboto Bold" size="15.0" />
-               </font>
-            </Label>
-            <Pane layoutX="34.0" layoutY="142.0" prefHeight="65.0" prefWidth="195.0" style="-fx-background-color: #F1F1F1;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="42.0" layoutX="14.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/diary-icon.png" />
-                     </image>
-                  </ImageView>
-                  <Label layoutX="74.0" layoutY="23.0" style="-fx-background-color: #F1F1F1;" text="Diary 1" textFill="#9abf80">
-                     <font>
-                        <Font name="Roboto Bold" size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="253.0" layoutY="142.0" prefHeight="65.0" prefWidth="195.0" style="-fx-background-color: #F1F1F1;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="42.0" layoutX="14.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/diary-icon.png" />
-                     </image>
-                  </ImageView>
-                  <Label layoutX="74.0" layoutY="23.0" style="-fx-background-color: #F1F1F1;" text="Diary 1" textFill="#9abf80">
-                     <font>
-                        <Font name="Roboto Bold" size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-            <Pane layoutX="470.0" layoutY="142.0" prefHeight="65.0" prefWidth="195.0" style="-fx-background-color: #F1F1F1;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="42.0" layoutX="14.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/diary-icon.png" />
-                     </image>
-                  </ImageView>
-                  <Label layoutX="74.0" layoutY="23.0" style="-fx-background-color: #F1F1F1;" text="Diary 1" textFill="#9abf80">
-                     <font>
-                        <Font name="Roboto Bold" size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
+           <!-- ScrollPane with VBox for Diary Items -->
+                <ScrollPane layoutX="34.0" layoutY="142.0" prefHeight="300.0" prefWidth="632.0" 
+                             fitToWidth="true" 
+                             hbarPolicy="NEVER" 
+                             vbarPolicy="AS_NEEDED">
+                    <VBox fx:id="diaryItemsVBox" 
+                               alignment="TOP_LEFT" 
+                               prefWidth="632.0"/>
+                </ScrollPane>
             <Button contentDisplay="CENTER" layoutX="541.0" layoutY="75.0" mnemonicParsing="false" style="-fx-background-color: #1C325B; -fx-background-radius: 20px;" text="Export into PDF" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
