--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-recycle-bin.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-recycle-bin.fxml
@@ -16,7 +16,7 @@
    <children>
       <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
          <children>
-            <Button layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+            <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
