--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
@@ -3,17 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.HistoryPageController">
+<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.HistoryPageController">
    <children>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
+      <Pane fx:id="historyPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
          <children>
             <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
@@ -26,15 +23,10 @@
                </font>
             </Label>
            <!-- ScrollPane with VBox for Diary Items -->
-                <ScrollPane layoutX="34.0" layoutY="142.0" prefHeight="300.0" prefWidth="632.0" 
-                             fitToWidth="true" 
-                             hbarPolicy="NEVER" 
-                             vbarPolicy="AS_NEEDED">
-                    <VBox fx:id="diaryItemsVBox" 
-                               alignment="TOP_LEFT" 
-                               prefWidth="632.0"/>
+                <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="34.0" layoutY="142.0" prefHeight="300.0" prefWidth="632.0" vbarPolicy="AS_NEEDED">
+                    <VBox fx:id="diaryItemsVBox" alignment="TOP_LEFT" prefWidth="632.0" />
                 </ScrollPane>
-            <Button contentDisplay="CENTER" layoutX="541.0" layoutY="75.0" mnemonicParsing="false" style="-fx-background-color: #1C325B; -fx-background-radius: 20px;" text="Export into PDF" textFill="WHITE">
+            <Button fx:id="exportButton" contentDisplay="CENTER" layoutX="541.0" layoutY="75.0" mnemonicParsing="false" style="-fx-background-color: #1C325B; -fx-background-radius: 20px;" text="Export into PDF" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
                </font>
@@ -45,6 +37,54 @@
                   <Insets bottom="8.0" left="20.0" right="20.0" top="8.0" />
                </padding>
             </Button>
+            <Pane fx:id="exportOptions" layoutX="466.0" layoutY="113.0" prefHeight="61.0" prefWidth="185.0" visible="false">
+               <children>
+                  <Button fx:id="basedOnDateRange" layoutX="4.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Based on picked date range" textAlignment="JUSTIFY" textFill="#444444">
+                     <font>
+                        <Font name="Roboto Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="8.0" top="8.0" />
+                     </padding>
+                  </Button>
+                <Button fx:id="basedOnPickedEntries" layoutX="4.0" layoutY="29.0" mnemonicParsing="false" prefHeight="1.0" prefWidth="192.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Based on picked entries" textFill="#444444">
+                     <font>
+                        <Font name="Roboto Bold" size="12.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="8.0" top="8.0" />
+                     </padding>
+                  </Button>
+               </children>
+            </Pane>
+            <Pane fx:id="exportOptions2" layoutX="466.0" layoutY="113.0" prefHeight="94.0" prefWidth="185.0" visible="false">
+   <children>
+      <Button fx:id="basedOnDay" layoutX="4.0" layoutY="0.0" mnemonicParsing="false" 
+              prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
+              text="Day" textFill="#444444">
+         <font>
+            <Font name="Roboto Bold" size="12.0" />
+         </font>
+      </Button>
+
+      <Button fx:id="basedOnWeek" layoutX="4.0" layoutY="29.0" mnemonicParsing="false" 
+              prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
+              text="Week" textFill="#444444">
+         <font>
+            <Font name="Roboto Bold" size="12.0" />
+         </font>
+      </Button>
+
+      <Button fx:id="basedOnMonth" layoutX="4.0" layoutY="58.0" mnemonicParsing="false" 
+              prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
+              text="Month" textFill="#444444">
+         <font>
+            <Font name="Roboto Bold" size="12.0" />
+         </font>
+      </Button>
+   </children>
+</Pane>
+
          </children>
       </Pane>
    </children>
