--- a/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="497.0" style="-fx-background-color: #9ABF80; -fx-background-radius: 8px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.SuccessMessageController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="497.0" style="-fx-background-color: #FF9696; -fx-background-radius: 8px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.ErrorMessageController">
    <children>
       <Text fx:id="messageText" fill="WHITE" layoutX="60.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="376.58587646484375">
          <font>
@@ -15,7 +15,7 @@
       </Text>
       <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="22.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/success-icon.png" />
+            <Image url="@images/error-icon.png" />
          </image>
       </ImageView>
       <ImageView fx:id="crossIcon" fitHeight="13.0" fitWidth="11.0" layoutX="462.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
