Fixed some sizing

--- a/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
+++ b/fopasg/src/main/resources/com/mycompany/frontend/css/style.css
@@ -91,7 +91,7 @@
 }
 
 .scroll-bar:vertical .thumb {
-    -fx-background-color: #9abf80;
+    -fx-background-color: #8F8F8F;
     -fx-background-radius: 5px;
 }
 
