Finished All Part Layouts

--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-recycle-bin.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-recycle-bin.fxml
@@ -48,6 +48,8 @@
                                alignment="TOP_LEFT" 
                                prefWidth="632.0"/>
                 </ScrollPane>
+               <!-- ScrollPane with FlowPane for Diary Items -->
+               
          </children>
       </Pane>
    </children>
