--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -33,7 +33,7 @@
                   <Font name="Roboto Bold" size="12.0" />
                </font>
             </Label>
-            <TextField layoutX="34.0" layoutY="124.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
+            <TextField editable="false" layoutX="34.0" layoutY="124.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
@@ -41,7 +41,7 @@
                   <Insets left="20.0" />
                </padding>
             </TextField>
-            <TextArea depthTest="DISABLE" layoutX="34.0" layoutY="186.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
+            <TextArea depthTest="DISABLE" editable="false" layoutX="34.0" layoutY="186.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
