Linked with main menu

--- a/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/error-message.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -22,6 +23,9 @@
          <image>
             <Image url="@images/close-icon.png" />
          </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </ImageView>
    </children>
 </Pane>
