--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -1,44 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="472.0" minWidth="700.0" prefHeight="490.0" prefWidth="720.0" style="-fx-background-color: # #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
    <children>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
+      <Pane layoutY="-1.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="490.0" minWidth="720.0" prefHeight="490.0" prefWidth="720.0" style="-fx-background-color: #ffffff;" stylesheets="@css/style.css">
          <children>
-            <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+            <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
+               <cursor>
+                     <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Label layoutX="34.0" layoutY="51.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#6a669d">
+            <Label layoutX="37.0" layoutY="63.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="34.0" layoutY="85.0" style="-fx-background-color: #ffffff;" text="Sunday" textFill="#8f8f8f">
+            <Label layoutX="37.0" layoutY="102.0" style="-fx-background-color: #ffffff;" text="Sunday" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="608.0" layoutY="87.0" style="-fx-background-color: #ffffff;" text="10:15 PM" textFill="#8f8f8f">
+            <Label layoutX="622.0" layoutY="95.0" style="-fx-background-color: #ffffff;" text="10:15 PM" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
                </font>
             </Label>
             <!-- Add styleClass="error" to have the red border effect -->
-            <TextField layoutX="34.0" layoutY="124.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;">
+            <TextField layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="638.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
@@ -55,7 +59,7 @@
             </Text> -->
 
             <!-- Add styleClass="error" to have the red border effect -->
-            <TextArea id="padding-top" depthTest="DISABLE" layoutX="34.0" layoutY="186.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content">
+            <TextArea id="padding-top" depthTest="DISABLE" layoutX="37.0" layoutY="197.0" prefHeight="217.0" prefWidth="638.0" promptText="Click here to write your content">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
@@ -67,9 +71,9 @@
                </font>
             </Text> -->
             
-            <Pane layoutX="104.0" layoutY="196.0" prefHeight="40.0" prefWidth="487.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
+            <Pane layoutX="117.0" layoutY="212.0" prefHeight="40.0" prefWidth="487.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
                <children>
-                  <Button alignment="CENTER" layoutX="40.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -77,8 +81,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="76.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -86,8 +93,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="112.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="112.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -95,8 +105,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="148.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -104,8 +117,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="184.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="184.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -113,8 +129,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="220.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="220.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -122,8 +141,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="256.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="256.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -131,9 +153,12 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Line endX="12.0" layoutX="303.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
-                  <Button alignment="CENTER" layoutX="315.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="315.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -141,8 +166,11 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="351.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="351.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -150,9 +178,12 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                   <Line endX="12.0" layoutX="395.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
-                  <Button alignment="CENTER" layoutX="410.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  <Button alignment="CENTER" layoutX="410.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -160,42 +191,51 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
-            <Button layoutX="556.0" layoutY="415.0" mnemonicParsing="false" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Save" textFill="WHITE">
+            <Button layoutX="566.0" layoutY="423.0" mnemonicParsing="false" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Save" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
                <padding>
                   <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
                </padding>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <TextField alignment="CENTER_RIGHT" disable="true" layoutX="32.0" layoutY="435.0" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font name="Roboto" size="10.0" />
-               </font>
-            </TextField>
-            <Label alignment="CENTER" layoutX="68.0" layoutY="431.0" prefHeight="23.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="155.0" layoutY="431.0" prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
-            <TextField alignment="CENTER_RIGHT" disable="true" layoutX="119.0" layoutY="435.0" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font name="Roboto" size="10.0" />
-               </font>
-            </TextField>
-
+            <FlowPane hgap="5.0" layoutX="51.0" layoutY="428.0" prefHeight="23.0" prefWidth="212.0">
+               <children>
+                  <TextField alignment="CENTER_RIGHT" disable="true" prefHeight="19.0" prefWidth="33.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="19.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <TextField alignment="CENTER_RIGHT" disable="true" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+               </children>
+            </FlowPane>
          </children>
       </Pane>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
-</VBox>
+</AnchorPane>
