--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.HistoryPageController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="720.0" prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.HistoryPageController">
    <children>
-      <Pane fx:id="historyPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
+      <Pane fx:id="historyPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="720.0" style="-fx-background-color: #ffffff;" stylesheets="@css/style.css">
          <children>
-            <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+            <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Label layoutX="34.0" layoutY="51.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="Entries" textFill="#6a669d">
+            <Label layoutX="37.0" layoutY="63.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="Entries" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <!-- ScrollPane with VBox for Diary Items -->
-            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="34.0" layoutY="142.0" prefHeight="300.0" prefWidth="632.0" vbarPolicy="AS_NEEDED">
+            <!-- ScrollPane with AnchorPane for Diary Items -->
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="34.0" layoutY="120.0" prefHeight="344.0" prefWidth="648.0" vbarPolicy="AS_NEEDED">
                <VBox fx:id="diaryItemsVBox" alignment="TOP_LEFT" prefWidth="632.0" />
             </ScrollPane>
             <Button fx:id="exportButton" contentDisplay="CENTER" layoutX="541.0" layoutY="75.0" mnemonicParsing="false" style="-fx-background-color: #1C325B; -fx-background-radius: 20px;" text="Export into PDF" textFill="WHITE">
@@ -36,6 +41,9 @@
                <padding>
                   <Insets bottom="8.0" left="20.0" right="20.0" top="8.0" />
                </padding>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
             <Pane fx:id="exportOptions" layoutX="466.0" layoutY="113.0" prefHeight="61.0" prefWidth="185.0" visible="false">
                <children>
@@ -46,6 +54,9 @@
                      <padding>
                         <Insets bottom="8.0" top="8.0" />
                      </padding>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                 <Button fx:id="basedOnPickedEntries" layoutX="4.0" layoutY="29.0" mnemonicParsing="false" prefHeight="1.0" prefWidth="192.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Based on picked entries" textFill="#444444">
                      <font>
@@ -54,33 +65,39 @@
                      <padding>
                         <Insets bottom="8.0" top="8.0" />
                      </padding>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
             <Pane fx:id="exportOptions2" layoutX="466.0" layoutY="113.0" prefHeight="94.0" prefWidth="185.0" visible="false">
                <children>
-                  <Button fx:id="basedOnDay" layoutX="4.0" layoutY="0.0" mnemonicParsing="false" 
-                     prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
-                     text="Day" textFill="#444444">
+                  <Button fx:id="basedOnDay" layoutX="4.0" layoutY="0.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Day" textFill="#444444">
                      <font>
                         <Font name="Roboto Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
 
-                  <Button fx:id="basedOnWeek" layoutX="4.0" layoutY="29.0" mnemonicParsing="false" 
-                     prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
-                     text="Week" textFill="#444444">
+                  <Button fx:id="basedOnWeek" layoutX="4.0" layoutY="29.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Week" textFill="#444444">
                      <font>
                         <Font name="Roboto Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
 
-                  <Button fx:id="basedOnMonth" layoutX="4.0" layoutY="58.0" mnemonicParsing="false" 
-                     prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" 
-                     text="Month" textFill="#444444">
+                  <Button fx:id="basedOnMonth" layoutX="4.0" layoutY="58.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Month" textFill="#444444">
                      <font>
                         <Font name="Roboto Bold" size="12.0" />
                      </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </Pane>
@@ -90,4 +107,4 @@
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
-</VBox>
+</AnchorPane>
