--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-view-page.fxml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" prefHeight="500.0" prefWidth="700.0" spacing="20.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="720.0" prefHeight="500.0" prefWidth="720.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryViewController">
    <children>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="700.0" stylesheets="@css/style.css">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="720.0" style="-fx-background-color: #ffffff;" stylesheets="@css/style.css">
          <children>
-            <Button fx:id="backButton" layoutX="24.0" layoutY="3.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+            <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
-            <Label layoutX="34.0" layoutY="51.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#6a669d">
+            <Label layoutX="37.0" layoutY="63.0" minWidth="-Infinity" style="-fx-background-color: #ffffff;" text="01 December 2024" textFill="#6a669d">
                <font>
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="34.0" layoutY="85.0" style="-fx-background-color: #ffffff;" text="Sunday" textFill="#8f8f8f">
+            <Label layoutX="37.0" layoutY="102.0" style="-fx-background-color: #ffffff;" text="Sunday" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="608.0" layoutY="87.0" style="-fx-background-color: #ffffff;" text="10:15 PM" textFill="#8f8f8f">
+            <Label layoutX="622.0" layoutY="95.0" style="-fx-background-color: #ffffff;" text="10:15 PM" textFill="#8f8f8f">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
                </font>
             </Label>
-            <TextField editable="false" layoutX="34.0" layoutY="124.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
+            <TextField editable="false" layoutX="37.0" layoutY="138.0" prefHeight="40.0" prefWidth="627.0" promptText="Click here to enter the title" style="-fx-background-color: #F1F1F1; -fx-background-radius: 0px;" text="Title">
                <font>
                   <Font name="Roboto Bold" size="15.0" />
                </font>
@@ -41,35 +46,39 @@
                   <Insets left="20.0" />
                </padding>
             </TextField>
-            <TextArea depthTest="DISABLE" editable="false" layoutX="34.0" layoutY="186.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
+            <TextArea depthTest="DISABLE" editable="false" layoutX="37.0" layoutY="197.0" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content" text="Some contents here">
                <font>
                   <Font name="Roboto" size="12.0" />
                </font>
             </TextArea>
-            <TextField alignment="CENTER_RIGHT" disable="true" layoutX="32.0" layoutY="435.0" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font name="Roboto" size="10.0" />
-               </font>
-            </TextField>
-            <Label alignment="CENTER" layoutX="68.0" layoutY="431.0" prefHeight="23.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="155.0" layoutY="431.0" prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
-            <TextField alignment="CENTER_RIGHT" disable="true" layoutX="119.0" layoutY="435.0" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
-               <font>
-                  <Font name="Roboto" size="10.0" />
-               </font>
-            </TextField>
+            <FlowPane hgap="5.0" layoutX="51.0" layoutY="428.0" prefHeight="23.0" prefWidth="212.0">
+               <children>
+                  <TextField alignment="CENTER_RIGHT" disable="true" prefHeight="19.0" prefWidth="33.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="19.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <TextField alignment="CENTER_RIGHT" disable="true" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+               </children>
+            </FlowPane>
          </children>
       </Pane>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
-</VBox>
+</AnchorPane>
