--- a/fopasg/src/main/resources/com/mycompany/frontend/mood-indicator.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/mood-indicator.fxml
@@ -7,71 +7,66 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="455.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.MoodIndicatorController">
    <children>
-      <Pane prefHeight="468.0" prefWidth="600.0">
+      <TilePane prefHeight="270.0" prefWidth="455.0" style="-fx-background-color: #F1F1F1; -fx-border-width: 10px; -fx-border-color: #6A669D; -fx-border-radius: 10px;">
          <children>
-            <TilePane layoutX="73.0" layoutY="65.0" prefHeight="270.0" prefWidth="455.0" style="-fx-background-color: #F1F1F1; -fx-border-width: 10px; -fx-border-color: #6A669D; -fx-border-radius: 10px;">
+            <Pane prefHeight="248.0" prefWidth="434.0">
                <children>
-                  <Pane prefHeight="248.0" prefWidth="434.0">
-                     <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="51.0" prefHeight="37.0" prefWidth="98.0" text="Good day!">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="84.0" layoutY="84.0" prefHeight="37.0" prefWidth="266.0" text="How are you feeling today?">
-                           <font>
-                              <Font name="System Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Button layoutX="46.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../../../../../../../../../Downloads/happy2.png" />
-                                 </image>
-                                 <cursor>
-                                    <Cursor fx:constant="WAIT" />
-                                 </cursor>
-                              </ImageView>
-                           </graphic>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="168.0" layoutY="51.0" prefHeight="37.0" prefWidth="98.0" text="Good day!">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="84.0" layoutY="84.0" prefHeight="37.0" prefWidth="266.0" text="How are you feeling today?">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="happyBtn" layoutX="46.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Happy-hover (mood).png" />
+                           </image>
                            <cursor>
-                              <Cursor fx:constant="HAND" />
+                              <Cursor fx:constant="WAIT" />
                            </cursor>
-                        </Button>
-                        <Button layoutX="179.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../../../../../../../../../Downloads/normal2.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-                        <Button layoutX="312.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../../../../../../../../../Downloads/sad2.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
-                     </children>
-                  </Pane>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="normalBtn" layoutX="179.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Neutral-hover (mood).png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="sadBtn" layoutX="312.0" layoutY="136.0" mnemonicParsing="false" style="-fx-background-color: #F1F1F1;">
+                     <graphic>
+                        <ImageView fitHeight="60.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/Sad-hover (mood).png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                </children>
-            </TilePane>
+            </Pane>
          </children>
-      </Pane>
+      </TilePane>
    </children>
-</VBox>
+</Pane>
