--- a/fopasg/src/main/resources/com/mycompany/frontend/mood-tracker.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/mood-tracker.fxml
@@ -4,46 +4,41 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.MoodTrackerController">
    <children>
-      <Pane prefHeight="410.0" prefWidth="600.0">
+      <Pane prefHeight="472.0" prefWidth="700.0" style="-fx-background-color: #ffffff;">
          <children>
-            <Label layoutX="25.0" layoutY="21.0" text="Back" textFill="#8f8f8f">
+            <Label layoutX="37.0" layoutY="63.0" text="Mood Tracker" textFill="#6a669d">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="25.0" layoutY="49.0" text="Mood Tracker" textFill="#6a669d">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Label>
-            <DatePicker layoutX="25.0" layoutY="91.0" prefHeight="25.0" prefWidth="117.0">
+            <DatePicker layoutX="37.0" layoutY="116.0" prefHeight="25.0" prefWidth="117.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </DatePicker>
-            <Label layoutX="156.0" layoutY="95.0" text="to" textFill="#1c325b">
+            <Label layoutX="163.0" layoutY="120.0" text="to" textFill="#1c325b">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <DatePicker layoutX="183.0" layoutY="91.0" prefHeight="25.0" prefWidth="117.0">
+            <DatePicker layoutX="184.0" layoutY="116.0" prefHeight="25.0" prefWidth="117.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </DatePicker>
-            <TilePane layoutX="29.0" layoutY="140.0" prefHeight="233.0" prefWidth="543.0">
+            <TilePane layoutX="79.0" layoutY="201.0" prefHeight="231.0" prefWidth="526.0">
                <children>
-                  <BarChart barGap="3.0" prefHeight="230.0" prefWidth="542.0" title="Mood Tracker">
+                  <BarChart barGap="3.0" prefHeight="230.0" prefWidth="532.0" title="Mood Tracker">
                     <xAxis>
                       <CategoryAxis side="BOTTOM" />
                     </xAxis>
@@ -55,5 +50,13 @@
             </TilePane>
          </children>
       </Pane>
+      <Button fx:id="backButton" layoutX="28.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Back" textFill="#8f8f8f">
+         <font>
+            <Font name="Roboto" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
-</VBox>
+</AnchorPane>
