--- a/fopasg/src/main/resources/com/mycompany/frontend/pop-up-box.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/pop-up-box.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: #6A669D; -fx-border-radius: 10px; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.PopUpBoxController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="400.0" style="-fx-border-color: #6A669D; -fx-border-radius: 10px; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.PopUpBoxController">
    <children>
       <Text fx:id="confirmationText" fill="#444444" layoutX="23.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="334.7418518066406">
          <font>
@@ -20,6 +21,9 @@
          <padding>
             <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
          </padding>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Button fx:id="yesButton" layoutX="200.0" layoutY="108.0" mnemonicParsing="false" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Yes" textFill="WHITE">
          <font>
@@ -28,6 +32,9 @@
          <padding>
             <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
          </padding>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </Pane>
