--- a/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/login-page.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.mycompany.frontend.loginpageController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.mycompany.frontend.LoginPageController">
    <children>
       <Pane layoutX="60.0" layoutY="60.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: E5E3D4; -fx-background-radius: 22;">
          <children>
