--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -3,7 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -11,8 +13,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.collections.FXCollections?>
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="472.0" minWidth="700.0" prefHeight="490.0" prefWidth="720.0" style="-fx-background-color: # #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.frontend.DiaryEntryPageController">
    <children>
@@ -50,28 +54,85 @@
                   <Insets left="20.0" />
                </padding>
             </TextField>
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="37.0" layoutY="190.0" prefHeight="223.0" prefWidth="638.0">
+               <content>
+                  <VBox alignment="CENTER" prefHeight="215.0" prefWidth="636.0" spacing="5.0">
+                     <children>
+                        
+                                                                                                      <!-- Below is the error message. Uncomment it to use. -->
+                        <!-- <Text fill="#ff9696" layoutX="36.0" layoutY="420.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title cannot be empty." wrappingWidth="118.26585388183594">
+                           <font>
+                                                                                                            <Font name="Roboto Black" size="10.0" />
+                                                                                                         </font>
+                                                                                                      </Text> -->
             
-            <!-- Below is the error message. Uncomment it to use. -->
-            <!-- <Text fill="#ff9696" layoutX="36.0" layoutY="420.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title cannot be empty." wrappingWidth="118.26585388183594">
+                                                                                                      <!-- Add styleClass="error" to have the red border effect -->
+                        <TextArea id="padding-top" fx:id="contents" depthTest="DISABLE" maxHeight="300.0" minHeight="205.0" prefHeight="300.0" prefWidth="636.0" promptText="Click here to write your content">
+                           <font>
+                              <Font name="Roboto" size="12.0" />
+                           </font>
+                        </TextArea>
+                        <FlowPane hgap="5.0">
+                           <children>
+                              <ImageView fitHeight="54.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/test-img.jpg" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="54.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/test-img.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </FlowPane>
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
+            <Button layoutX="566.0" layoutY="423.0" mnemonicParsing="false" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Save" textFill="WHITE">
                <font>
-                  <Font name="Roboto Black" size="10.0" />
+                  <Font name="Roboto Bold" size="15.0" />
                </font>
-            </Text> -->
-
-            <!-- Add styleClass="error" to have the red border effect -->
-            <TextArea fx:id="contents" id="padding-top" depthTest="DISABLE" layoutX="37.0" layoutY="197.0" prefHeight="217.0" prefWidth="638.0" promptText="Click here to write your content">
-               <font>
-                  <Font name="Roboto" size="12.0" />
-               </font>
-            </TextArea>
+               <padding>
+                  <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
+               </padding>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <FlowPane hgap="5.0" layoutX="51.0" layoutY="428.0" prefHeight="23.0" prefWidth="212.0">
+               <children>
+                  <TextField fx:id="wordCount" alignment="CENTER_RIGHT" disable="true" prefHeight="19.0" prefWidth="33.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="19.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="charCount" alignment="CENTER_RIGHT" disable="true" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
+                     <font>
+                        <Font name="Roboto" size="10.0" />
+                     </font>
+                  </TextField>
+                  <Label prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Label>
+               </children>
+            </FlowPane>
             <!-- Below is the error message. Uncomment it to use. -->
             <!-- <Text fill="#ff9696" layoutX="34.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Title cannot be empty." wrappingWidth="101.376953125">
                <font>
-                  <Font name="Roboto Black" size="10.0" />
-               </font>
-            </Text> -->
+                                                                                                <Font name="Roboto Black" size="10.0" />
+                                                                                             </font>
+                                                                                          </Text> -->
             
-            <Pane layoutX="117.0" layoutY="212.0" prefHeight="40.0" prefWidth="487.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
+            <Pane layoutX="120.0" layoutY="201.0" prefHeight="40.0" prefWidth="487.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
                <children>
                   <Button alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
@@ -98,13 +159,6 @@
                      </cursor>
                   </Button>
                   <Button alignment="CENTER" layoutX="112.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/font-size-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -195,43 +249,30 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <ComboBox layoutX="105.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <items>
+                        <FXCollections fx:factory="observableArrayList">
+                           <Label fx:id="8" text="8"/>
+                           <Label fx:id="9" text="10"/>
+                           <Label fx:id="10" text="12"/>
+                           <Label fx:id="11" text="14"/>
+                           <Label fx:id="12" text="16"/>
+                           <Label fx:id="13" text="18"/>
+                           <Label fx:id="14" text="20"/>
+                           <Label fx:id="15" text="22"/>
+                        </FXCollections>
+                     </items>
+                  </ComboBox>
+                  <ImageView fitHeight="11.0" fitWidth="11.0" layoutX="124.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/font-size-icon.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
-            <Button layoutX="566.0" layoutY="423.0" mnemonicParsing="false" style="-fx-background-color: #9ABF80; -fx-background-radius: 20px;" text="Save" textFill="WHITE">
-               <font>
-                  <Font name="Roboto Bold" size="15.0" />
-               </font>
-               <padding>
-                  <Insets bottom="8.0" left="40.0" right="40.0" top="8.0" />
-               </padding>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <FlowPane hgap="5.0" layoutX="51.0" layoutY="428.0" prefHeight="23.0" prefWidth="212.0">
-               <children>
-                  <TextField fx:id="wordCount" alignment="CENTER_RIGHT" disable="true" prefHeight="19.0" prefWidth="33.0" promptText="0" style="-fx-background-color: #ffffff;">
-                     <font>
-                        <Font name="Roboto" size="10.0" />
-                     </font>
-                  </TextField>
-                  <Label prefHeight="19.0" prefWidth="44.0" text="Words" textFill="#8f8f8f">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="charCount" alignment="CENTER_RIGHT" disable="true" prefHeight="16.0" prefWidth="36.0" promptText="0" style="-fx-background-color: #ffffff;">
-                     <font>
-                        <Font name="Roboto" size="10.0" />
-                     </font>
-                  </TextField>
-                  <Label prefHeight="23.0" prefWidth="59.0" text="Characters" textFill="#8f8f8f">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Label>
-               </children>
-            </FlowPane>
          </children>
       </Pane>
    </children>
