--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-entry-page.fxml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -67,11 +66,9 @@
                                                                                                       </Text> -->
             
                                                                                                       <!-- Add styleClass="error" to have the red border effect -->
-                        <TextArea id="padding-top" fx:id="contents" depthTest="DISABLE" prefHeight="217.0" prefWidth="627.0" promptText="Click here to write your content">
-                           <font>
-                              <Font name="Roboto" size="12.0" />
-                           </font>
-                        </TextArea>
+                        <Pane fx:id="textarea" prefHeight="217.0" prefWidth="627.0">
+                           
+                        </Pane>
                         <FlowPane fx:id="images" hgap="5.0">
                            <children>
                            </children>
@@ -122,74 +119,39 @@
                                                                                              </font>
                                                                                           </Text> -->
             
-            <Pane layoutX="120.0" layoutY="201.0" prefHeight="40.0" prefWidth="487.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
+            <Pane layoutX="120.0" layoutY="201.0" prefHeight="40.0" prefWidth="502.0" style="-fx-background-color: #F1F1F1; -fx-background-radius: 5px;">
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="40.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/bold-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="textBold" alignment="CENTER" contentDisplay="CENTER" layoutX="29.0" layoutY="2.5" mnemonicParsing="false" prefHeight="33.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="76.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/italic-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="textItalic" alignment="CENTER" contentDisplay="CENTER" layoutX="58.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="112.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                   <ComboBox fx:id="fontSizeComboBox" layoutX="100.0" layoutY="7.0" prefHeight="25.0" prefWidth="20.0" style="-fx-background-color: #f1f1f1;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ComboBox>
+                  <Button fx:id="textUnderline" alignment="CENTER" layoutX="148.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="148.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/underline-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="textStrikethrough" alignment="CENTER" layoutX="180.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="184.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/strikethrough-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <ColorPicker fx:id="textForeground" layoutX="220.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
-                  </Button>
-                  <Button alignment="CENTER" layoutX="220.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/font-colour-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="256.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
+                  </ColorPicker>
+                  <!-- <Button alignment="CENTER" contentDisplay="CENTER" layoutX="256.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -200,28 +162,19 @@
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
-                  </Button>
+                  </Button> -->
+                  <ColorPicker fx:id="textBackground" layoutX="256.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ColorPicker>
                   <Line endX="12.0" layoutX="303.0" layoutY="20.0" rotate="90.0" startX="-10.0" stroke="#8f8f8f" strokeWidth="0.5" />
-                  <Button alignment="CENTER" layoutX="315.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/list-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="bulletList" alignment="CENTER" layoutX="315.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button alignment="CENTER" layoutX="351.0" layoutY="3.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="11.0" fitWidth="11.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/paragraph-style-icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button fx:id="numberList" alignment="CENTER" layoutX="351.0" layoutY="2.5" mnemonicParsing="false" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
@@ -239,28 +192,6 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <ComboBox layoutX="105.0" layoutY="3.0" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #f1f1f1;">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <items>
-                        <FXCollections fx:factory="observableArrayList">
-                           <Label fx:id="8" text="8" />
-                           <Label fx:id="9" text="10" />
-                           <Label fx:id="10" text="12" />
-                           <Label fx:id="11" text="14" />
-                           <Label fx:id="12" text="16" />
-                           <Label fx:id="13" text="18" />
-                           <Label fx:id="14" text="20" />
-                           <Label fx:id="15" text="22" />
-                        </FXCollections>
-                     </items>
-                  </ComboBox>
-                  <ImageView fitHeight="11.0" fitWidth="11.0" layoutX="124.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/font-size-icon.png" />
-                     </image>
-                  </ImageView>
                </children>
             </Pane>
          </children>
