--- a/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
+++ b/fopasg/src/main/resources/com/mycompany/frontend/diary-history-page.fxml
@@ -27,10 +27,13 @@
                   <Font name="Roboto Bold" size="20.0" />
                </font>
             </Label>
-            <!-- ScrollPane with AnchorPane for Diary Items -->
+
+            <!-- ScrollPane with VBox for Diary Items -->
             <ScrollPane  layoutX="34.0" layoutY="120.0" prefHeight="344.0" prefWidth="648.0" vbarPolicy="AS_NEEDED">
                <VBox fx:id="diaryItemsVBox" alignment="TOP_LEFT" prefWidth="632.0" />
             </ScrollPane>
+            <!-- ScrollPane with VBox for Diary Items -->
+            
             <Button fx:id="exportButton" contentDisplay="CENTER" layoutX="541.0" layoutY="75.0" mnemonicParsing="false" style="-fx-background-color: #1C325B; -fx-background-radius: 20px;" text="Export into PDF" textFill="WHITE">
                <font>
                   <Font name="Roboto Bold" size="12.0" />
@@ -90,7 +93,6 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-
                   <Button fx:id="basedOnMonth" layoutX="4.0" layoutY="58.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="177.0" style="-fx-background-color: #D9D9D9; -fx-background-radius: 0;" text="Month" textFill="#444444">
                      <font>
                         <Font name="Roboto Bold" size="12.0" />
